<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        android:text="@string/nick_first_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_text_nick_first_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="1"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        android:text="@string/nick_second_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_text_nick_second_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional"
        android:inputType="text"
        android:lines="1"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        android:text="@string/nick_third_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_text_nick_third_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional"
        android:inputType="text"
        android:lines="1"
        android:singleLine="true" />
</LinearLayout>